opam-version: "1.2.2"
name: "key-value-store"
vers: "0.1"
maintainer: "phlalx@users.noreply.github.com"
authors: ["phlalx@users.noreply.github.com"]
homepage: "https://github.com/phlalx/key-value-store"
bug-reports: "https://github.com/phlalx/key-value-store/issues"
license: "GPLv3"
dev-repo: "https://github.com/phlalx/key-value-store.git"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [                                                                       
  "core" {>= "v0.9.1"} 
  "core_extended" {>= "v0.9.0"} 
  "ppx_jane" {>= "v0.9.0"}
  "ounit" {>= "2.0.0"}
  ]      
available: [ ocaml-version >= "4.05.0" ]
descr: "
key-value-store is a template for a *modern* OCaml command-line application.
"
